gcc/testsuite/g++.dg/modules/mod-decl-5_b.C


import thing.baz;

export int foo (); // { dg-error "after an interface" }

module thing.baz [[interface]]; // { dg-error "already imported" }

import thing.baz;

